// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return view (isAuth=false) 1`] = `
<DocumentFragment>
  <div
    class="main-nav"
  >
    <div
      class="row row_jc-sb row_ai-c "
    >
      <nav>
        <ul
          class="row"
        >
          <li>
            <a
              href="/home"
            >
              Home
            </a>
          </li>
          <li>
            <a
              href="/search"
            >
              Search
            </a>
          </li>
          <li>
            <a
              href="/about"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
      <button
        class="button default-button primary-button"
      >
        Login
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should return view (isAuth=true) 1`] = `
<DocumentFragment>
  <div
    class="main-nav"
  >
    <div
      class="row row_jc-sb row_ai-c "
    >
      <nav>
        <ul
          class="row"
        >
          <li>
            <a
              href="/home"
            >
              Home
            </a>
          </li>
          <li>
            <a
              href="/search"
            >
              Search
            </a>
          </li>
          <li>
            <a
              href="/about"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
      <a
        href="/profile"
      >
        <div
          class="user-short-info"
        >
          <div
            class="row  row_ai-c "
          >
            <div
              class="round-box"
            >
              <img
                alt="Test firstname-Test lastname"
                height="20"
                src="default.png"
                width="20"
              />
            </div>
            <p>
              Test firstname Test lastname
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
